@@ -1,7 +1,11 @@
 
 *MASTER* ()
 
-* 
+* Add identity insert support for views. Cache #views so that identity #table_name_or_views_table_name 
+  will run quickly. [Ken Collins]
+
+* Add views support. ActiveRecord classes can use views. The connection now has a #views method and 
+  #table_exists? will not fall back to checking views too. [Ken Collins]
 
 
 *2.2.0* (November 21st, 2008)
